force-app/main/default/objects/Support_Case__c/Support_Case__c.object-meta.xml
<CustomObject>
    <label>Support Case</label>
    <nameField>
        <label>Support Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>