force-app/main/default/objects/Support_Case__c/fields/Due_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_c__c</fullName>
    <label>Due_Date__c</label>
    <type>DateTime</type>
</CustomField>