force-app/main/default/objects/Support_Case__c/fields/SLA_Hours_c__c.field-meta.xml
<CustomField>
    <fullName>SLA_Hours_c__c</fullName>
    <label>SLA_Hours__c</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>